--- a/02_KClaimUnitTest/02_KClaimUnitTest.csproj
+++ b/02_KClaimUnitTest/02_KClaimUnitTest.csproj
@@ -49,11 +49,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="KClaimUnitTest.cs" />
+    <Compile Include="ClaimUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\02_KClaims\02_KClaims.csproj">
+      <Project>{EE6E36CB-B055-4120-8B8E-F5A5EF0327E3}</Project>
+      <Name>02_KClaims</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
