--- a/03_KBadgesUnitTest/03_KBadgesUnitTest.csproj
+++ b/03_KBadgesUnitTest/03_KBadgesUnitTest.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="03_KBadgesUnitTest.cs" />
+    <Compile Include="03_BadgesUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
