--- a/03_KBadges/03_KBadges.csproj
+++ b/03_KBadges/03_KBadges.csproj
@@ -41,8 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="KBadgesClass.cs" />
-    <Compile Include="KBadgesRepo.cs" />
+    <Compile Include="BadgesClass.cs" />
+    <Compile Include="BadgesRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
