update last midday

--- a/03_KBadgesUnitTest/03_KBadgesUnitTest.csproj
+++ b/03_KBadgesUnitTest/03_KBadgesUnitTest.csproj
@@ -49,11 +49,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="03_BadgesUnitTest.cs" />
+    <Compile Include="BadgesUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\03_KBadges\03_KBadges.csproj">
+      <Project>{C254772C-53A7-4EFB-A714-D6C4B4AB7734}</Project>
+      <Name>03_KBadges</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
