--- a/03_KBadges/03_KBadges.csproj
+++ b/03_KBadges/03_KBadges.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BadgesClass.cs" />
+    <Compile Include="BadgesContent.cs" />
     <Compile Include="BadgesRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
