--- a/03_KBadgesUI/03_KBadgesUI.csproj
+++ b/03_KBadgesUI/03_KBadgesUI.csproj
@@ -50,5 +50,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\03_KBadges\03_KBadges.csproj">
+      <Project>{C254772C-53A7-4EFB-A714-D6C4B4AB7734}</Project>
+      <Name>03_KBadges</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
